final update of first hw project

--- a/Contact.html
+++ b/Contact.html
@@ -12,13 +12,14 @@
     <span id= "myName">
         <p>Moshe Stern</p>
     </span>
+    <div id="linksH">
     <a href="index.html"><i class="fas fa-home"></i>About</a>
     <a href="Portfolio.html"><i class="far fa-images"></i>Portfolio</a>
     <a href="Contact.html"><i class="fas fa-envelope-square"></i>Contact</a>
+    </div>
 </header>
-  <hr>
   <form id="mainF">
-    <h1>Contact</h1>
+    <h2>Contact</h2>
     <label>
       <span>Name:</span>
       <input id="nameF" type="text" name="name" placeholder="John Smith" />
