--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,73 +9,77 @@
 
 <body>
   <header id="headerP">
-    <span id= "myName">
-        <p>Moshe Stern</p>
+    <span id="myName">
+      <p>Moshe Stern</p>
     </span>
+    <div id="linksH">
     <a href="index.html"><i class="fas fa-home"></i>About</a>
     <a href="Portfolio.html"><i class="far fa-images"></i>Portfolio</a>
     <a href="Contact.html"><i class="fas fa-envelope-square"></i>Contact</a>
-</header>
-  <hr>
-  <table id="tableG">
-    <br>
-    <tbody>
-      <div id="tableName">
-        <h2>Portfolio</h2>
-      </div>
-      <tr>
-        <td>
-          <div class="gallery">
-            <a href="/pet_project/game.html"><img class="picG" src="Assets/Images/spaceinvaders.jpg"
-                title="Love Project"></a>
-            <div class="projectName">
-              <p>project 1</p>
+    </div>
+  </header>
+  <div class="white-bg">
+    <!-- <div id="tableName"> -->
+      <h2>Portfolio</h2>
+    <!-- </div> -->
+    <hr />
+    <table id="tableG">
+      <br>
+      <tbody>
+        <tr>
+          <td>
+            <div class="gallery">
+              <a href="/pet_project/game.html"><img class="picG" src="Assets/Images/spaceinvaders.jpg"
+                  title="Love Project"></a>
+              <div class="projectName">
+                <p>project 1</p>
+              </div>
             </div>
-          </div>
-        </td>
-        <td>
-          <div class="gallery">
-            <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
-                title="Love Project" /></a>
-            <div class="projectName">
-              <p>project 2</p>
+          </td>
+          <td>
+            <div class="gallery">
+              <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
+                  title="Love Project" /></a>
+              <div class="projectName">
+                <p>project 2</p>
+              </div>
             </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="gallery">
-            <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
-                title="Love Project" /></a>
-            <div class="projectName">
-              <p>project 3</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="gallery">
+              <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
+                  title="Love Project" /></a>
+              <div class="projectName">
+                <p>project 3</p>
+              </div>
             </div>
-          </div>
-        </td>
-        <td>
-          <div class="gallery">
-            <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
-                title="Love Project" /></a>
-            <div class="projectName">
-              <p>project 4</p>
+          </td>
+          <td>
+            <div class="gallery">
+              <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
+                  title="Love Project" /></a>
+              <div class="projectName">
+                <p>project 4</p>
+              </div>
             </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="gallery">
-            <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
-                title="Love Project" /></a>
-            <div class="projectName">
-              <p>project 5</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="gallery">
+              <a href="/pet_project/mainpage.html"><img class="picG" src="Assets/Images/Love.jpg"
+                  title="Love Project" /></a>
+              <div class="projectName">
+                <p>project 5</p>
+              </div>
             </div>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <footer id="footerP">
     copyright @moshecstern
   </footer>
