--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Moshes Portfolio</title>
-      <!-- We link our html to the Bootstrap CDN
+    <!-- We link our html to the Bootstrap CDN
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   -->
     <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
@@ -12,15 +12,16 @@
 
 <body>
     <header id="headerP">
-        <span id= "myName">
+        <span id="myName">
             <p>Moshe Stern</p>
         </span>
-        <a href="index.html"><i class="fas fa-home"></i>About</a>
-        <a href="Portfolio.html"><i class="far fa-images"></i>Portfolio</a>
-        <a href="Contact.html"><i class="fas fa-envelope-square"></i>Contact</a>
+        <div id="linksH">
+            <a href="index.html"><i class="fas fa-home"></i>About</a>
+            <a href="Portfolio.html"><i class="far fa-images"></i>Portfolio</a>
+            <a href="Contact.html"><i class="fas fa-envelope-square"></i>Contact</a>
+        </div>
     </header>
-    <hr>
-<!-- 
+    <!-- 
     <nav id="navBarP">
         <a href="#footerP">go to the footer</a>
         <a href="#contentP">Content</a>
@@ -31,10 +32,19 @@
             <h1>About me</h1>
             <hr>
             <img id="profilePic" src="Assets/Images/profilepic.jpg">
-            <p> I was born in Jerusalem, Israel in 1994. I moved to Philadelphia in 1996, and from there to Milwaukee, St Louis, Miami, and then back to israel. I served in the Israeli Defense Force in the foreign relations unit and then worked as a genarel manager in a resturant/ bar called mikes place. I am learning alot about coding and am excited to see where this goes!</p>
+            <p> I was born in Jerusalem, Israel in 1994.
+                I moved to Philadelphia in 1996,
+                and from there to Milwaukee, St Louis,
+                Miami, and then back to Israel.
+                I served in the Israeli Defense Force in
+                the foreign relations unit and then worked 
+                as a general manager in a resturant/ bar
+                called Mikes Place. I am learning alot 
+                about coding and am excited to see where 
+                this goes!</p>
         </article>
     </section>
-<!-- 
+    <!-- 
     <aside id="asideP">
         Look at this side article!
     </aside>
